Fixed a bug with negative numbers

--- a/RandomTeleport v1.0/plugin.yml
+++ b/RandomTeleport v1.0/plugin.yml
@@ -1,7 +1,7 @@
 name: RandomTeleport
 main: de.themoep.bukkit.plugin.RandomTeleport.RandomTeleport
 softdepend: [WorldGuard,Factions]
-version: 1.4.9 de git
+version: 1.4.10
 description: provides a command to teleport the player to a random save location
 author: Phoenix616
 website: http://dev.bukkit.org/bukkit-plugins/randomteleport/
