--- a/RandomTeleport v1.0/config.yml
+++ b/RandomTeleport v1.0/config.yml
@@ -3,7 +3,7 @@
 # Don't use the -p parameter, this will get added automaticly with the senders name/the specified playername
 presets:
    default: "/rtp 100 1000 -f"
-# add more to use /rtp <rtpname>, player needs "randomteleport.default.<rtpname>"
+# add more to use /rtp <rtpname>, player needs "randomteleport.presets.<rtpname>"
 #   <rtpname>: "/rtp 1 2"
    test: "rtp 10 200 -f"
 
