--- a/RandomTeleport v1.0/src/plugin.yml
+++ b/RandomTeleport v1.0/src/plugin.yml
@@ -1,7 +1,7 @@
 name: RandomTeleport
 main: de.themoep.bukkit.plugin.RandomTeleport.RandomTeleport
 softdepend: [WorldGuard,Factions]
-version: 1.6.0
+version: 1.7.0
 description: provides a command to teleport the player to a random save location
 author: Phoenix616
 website: http://dev.bukkit.org/bukkit-plugins/randomteleport/
@@ -18,10 +18,13 @@ commands:
              Options:
              > -p,-player <playername> - teleports other players
              > -w,-world <worldname> - teleports the player in a specific world
+             > -b,-biome <biomename> [<biome 2> ...] - only teleport to this biome (multiple allowed, Bukkit biome names!)
              > -x,-xPos <x value> - x axis of the center point, if not set the player's x axis is used
              > -z,-zPos <z value> - z axis of the center point, if not set the player's z axis is used
+             > -l,-loadedchunks - only search loaded chunks for possible locations
              > -c, -cooldown <seconds> - cooldown in seconds after which the player can use this teleporter again
              > -f,-force - teleport even if there is no dirt/grass/sand/gravel, only checks for lava/water/cactus, ignores WorldGuard/Faction regions
+             > -f,-force [<blocks|regions>] - only ignore blocks or regions
              /<command> stat - shows a statistic of the teleports since the last restart
              /<command> reload - reloads the config
 permissions:
