Use english language... derpdiderp

--- a/RandomTeleport v1.0/src/main/resources/config.yml
+++ b/RandomTeleport v1.0/src/main/resources/config.yml
@@ -10,7 +10,7 @@ presets:
 msg:
    search: "&7RandomTeleport searches for a safe place in world {worldname}. . ."
    teleport: "&7RandomTeleport teleported you to X: {x} Y: {y} Z: {z}!"
-   setspawnpoint: "&7Dein Respawnpoint wurde an deine Position gesetzt!"
+   setspawnpoint: "&7Your Respawnpoint has been set to your current location!"
    error:
       location: "&4Error: &cRandomTeleport could not find a save location!"
       cooldown: "&cYou have to wait {cooldown_text}before using this RandomTeleport again!"
