--- a/RandomTeleport v1.0/pom.xml
+++ b/RandomTeleport v1.0/pom.xml
@@ -24,6 +24,10 @@
             <id>sk89q-repo</id>
             <url>http://maven.sk89q.com/repo/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -69,6 +73,11 @@
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/Factions-Dependencies-2.6+2.7.1+UUID.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Brettflan</groupId>
+            <artifactId>WorldBorder</artifactId>
+            <version>master-c5df3417c8-1</version>
         </dependency>
     </dependencies>
 
