--- a/RandomTeleport v1.0/src/main/resources/config.yml
+++ b/RandomTeleport v1.0/src/main/resources/config.yml
@@ -1,3 +1,4 @@
+debug: false
 # Triggered when you use /rtp without any additional paramters
 # Just write your command as you would use it ingame here
 # Don't use the -p parameter, this will get added automaticly with the senders name/the specified playername
