--- a/RandomTeleport v1.0/pom.xml
+++ b/RandomTeleport v1.0/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.themoep</groupId>
     <artifactId>RandomTeleport</artifactId>
-    <version>1.7-SNAPSHOT</version>
+    <version>1.7.2</version>
     <description>Randomly teleport players on your server!</description>
     <name>RandomTeleport</name>
 
