--- a/RandomTeleport v1.0/src/main/resources/config.yml
+++ b/RandomTeleport v1.0/src/main/resources/config.yml
@@ -15,3 +15,4 @@ msg:
    error:
       location: "&4Error: &cRandomTeleport could not find a save location!"
       cooldown: "&cYou have to wait {cooldown_text}before using this RandomTeleport again!"
+      searching: "&cYou are queued already. Please wait!"
