Make it compile with 1.13 (Fixes #19)

--- a/RandomTeleport v1.0/src/main/resources/plugin.yml
+++ b/RandomTeleport v1.0/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: RandomTeleport
 main: de.themoep.bukkit.plugin.RandomTeleport.RandomTeleport
 softdepend: [WorldGuard,Factions,GriefPrevention,ClanControl,WorldBorder]
 version: '${minecraft.plugin.version}'
+api-version: 1.13
 description: provides a command to teleport the player to a random save location
 author: Phoenix616
 website: http://dev.bukkit.org/bukkit-plugins/randomteleport/
