--- a/randomteleport-hook/pom.xml
+++ b/randomteleport-hook/pom.xml
@@ -10,7 +10,7 @@
         <version>2.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>randomteleport-hooks</artifactId>
+    <artifactId>randomteleport-hook</artifactId>
 
 
 </project>
