--- a/randomteleport-plugin/src/main/resources/config.yml
+++ b/randomteleport-plugin/src/main/resources/config.yml
@@ -62,11 +62,15 @@ unsave-blocks:
 - end_rod
 - end_gateway
 
-# Just write your command as you would use it ingame here
-# Don't use the -p parameter, this will get added automaticly with the senders name/the specified playername
+sign-variables:
+- "[RTP]"
+- "[RandomTP]"
+
+# Just write your command arguments as you would use it ingame behind /rtp
+# Don't use the -p parameter, this will get added automatically with the senders name/the specified playername
 presets:
   # Triggered when you use /rtp without any additional paramters
-  default: "/rtp 100 1000 -f"
+  default: "100 1000 -f"
   # add more to use /rtp <rtpname>, player needs "randomteleport.presets.<rtpname>"
   #   <rtpname>: "/rtp 1 2"
-  test: "rtp 10 200 -f"
+  test: "10 200 -f"
