--- a/randomteleport-plugin/pom.xml
+++ b/randomteleport-plugin/pom.xml
@@ -46,7 +46,7 @@
 
     <build>
         <finalName>${minecraft.plugin.name}</finalName>
-        <outputDirectory>../target/</outputDirectory>
+        <directory>../target/</directory>
         <resources>
             <resource>
                 <filtering>true</filtering>
@@ -63,7 +63,11 @@
                     <relocations>
                         <relocation>
                             <pattern>io.papermc.lib</pattern>
-                            <shadedPattern>de.themoep.randomteleport.paperlib</shadedPattern>
+                            <shadedPattern>de.themoep.randomteleport.libs.paperlib</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>de.themoep.utils.lang</pattern>
+                            <shadedPattern>de.themoep.randomteleport.libs.lang</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
