--- a/randomteleport-plugin/src/main/resources/plugin.yml
+++ b/randomteleport-plugin/src/main/resources/plugin.yml
@@ -10,23 +10,24 @@ commands:
       aliases: [randomtp, rtp]
       description: RandomTeleport command.
       usage: |
-             /<command> - uses the default preset
-             /<command> <preset> [<playername>] - uses a specific preset
-             /<command> <minRange> <maxRange> [-p, -w, -x, -z, -c, -f]
-             minRange - minimum distance to the center point (square shaped)
-             maxRange - maximum distance to the center point (square shaped)
-             Options:
-             > -p,-player <playername> - teleports other players
-             > -w,-world <worldname> - teleports the player in a specific world
-             > -b,-biome <biomename> [<biome 2> ...] - only teleport to this biome (multiple allowed, Bukkit biome names!)
-             > -x,-xPos <x value> - x axis of the center point, if not set the player's x axis is used
-             > -z,-zPos <z value> - z axis of the center point, if not set the player's z axis is used
-             > -l,-loaded - only search loaded chunks for possible locations
-             > -c, -cooldown <seconds> - cooldown in seconds after which the player can use this teleporter again
-             > -f,-force - teleport even if there is no dirt/grass/sand/gravel, only checks for lava/water/cactus, ignores WorldGuard/Faction regions
-             > -f,-force [<blocks|regions>] - only ignore blocks or regions
-             /<command> --stat - shows a statistic of the teleports since the last restart
-             /<command> --reload - reloads the config
+        /<command> - uses the default preset
+        /<command> <preset> [<playername>] - uses a specific preset
+        /<command> <minRange> <maxRange> [-p, -w, -x, -z, -c, -f]
+        minRange - minimum distance to the center point (square shaped)
+        maxRange - maximum distance to the center point (square shaped)
+        Options:
+        > -p,-player <playername> - teleports other players
+        > -w,-world <worldname> - teleports the player in a specific world
+        > -b,-biome <biomename> [<biome 2> ...] - only teleport to this biome (multiple allowed, Bukkit biome names!)
+        > -x,-xPos <x value> - x axis of the center point, if not set the player's x axis is used
+        > -z,-zPos <z value> - z axis of the center point, if not set the player's z axis is used
+        > -g,-generated - only search generated chunks for possible locations
+        > -c, -cooldown <seconds> - cooldown in seconds after which the player can use this teleporter again
+        > -id <id> - The ID to use for the cooldown, uses automatically generated one if not provided
+        > -f,-force - teleport even if there is no dirt/grass/sand/gravel, only checks for lava/water/cactus, ignores WorldGuard/Faction regions
+        > -f,-force [<blocks|regions>] - only ignore blocks or regions
+        /<command> --stat - shows a statistic of the teleports since the last restart
+        /<command> --reload - reloads the config
 permissions:
    randomteleport.use:
       description: Gives permission to the command
