Add RedProtect hook (Resolves #14)

--- a/randomteleport-plugin-hooks/pom.xml
+++ b/randomteleport-plugin-hooks/pom.xml
@@ -18,6 +18,7 @@
         <module>worldguard-6</module>
         <module>worldguard-7</module>
         <module>griefprevention</module>
+        <module>redprotect</module>
         <module>worldborder</module>
     </modules>
 
