Add factions Hooks (2 and UUID)

--- a/randomteleport-plugin-hooks/pom.xml
+++ b/randomteleport-plugin-hooks/pom.xml
@@ -19,6 +19,8 @@
         <module>worldguard-7</module>
         <module>griefprevention</module>
         <module>redprotect</module>
+        <module>factions</module>
+        <module>factions-uuid</module>
         <module>worldborder</module>
     </modules>
 
