--- a/randomteleport-plugin-hooks/factions/pom.xml
+++ b/randomteleport-plugin-hooks/factions/pom.xml
@@ -22,7 +22,7 @@
     <dependencies>
         <dependency>
             <groupId>com.massivecraft.factions</groupId>
-            <artifactId>Factions</artifactId>
+            <artifactId>factions</artifactId>
             <version>2.12.0</version>
             <scope>provided</scope>
         </dependency>
