--- a/randomteleport-plugin/src/main/resources/config.yml
+++ b/randomteleport-plugin/src/main/resources/config.yml
@@ -6,54 +6,88 @@ debug: true
 # Blocks to teleport on in normal mode
 save-blocks:
 - sand
+- sandstone
 - gravel
 - dirt
+- grass_block
+- coarse_dirt
+- podzol
 - stone
+- granite
+- diorite
+- andesite
 - cobblestone
-- ender_stone
+- end_stone
 - netherrack
 
 # Blocks unsave when in "--force blocks" mode
 unsave-blocks:
 - air
 - water
-- stationary_water
 - lava
-- stationary_lava
-- sapling
-- bed_block
+- oak_sapling
+- spruce_sapling
+- birch_sapling
+- jungle_sapling
+- acacia_sapling
+- dark_oak_sapling
+- white_bed
+- orange_bed
+- magenta_bed
+- light_blue_bed
+- yellow_bed
+- lime_bed
+- pink_bed
+- gray_bed
+- light_gray_bed
+- cyan_bed
+- purple_bed
+- blue_bed
+- brown_bed
+- green_bed
+- red_bed
+- black_bed
 - powered_rail
 - detector_rail
-- web
-- piston_extension
+- cobweb
+- piston_head
 - tnt
 - torch
 - fire
-- sign_post
-- wooden_door
+- sign
 - ladder
-- rails
+- rail
 - wall_sign
 - lever
-- stone_plate
-- iron_door_block
-- redstone_torch_off
-- redstone_torch_on
+- stone_pressure_plate
+- iron_door
+- redstone_wall_torch
+- redstone_torch
 - stone_button
 - cactus
-- magma
-- portal
+- magma_block
+- nether_portal
 - vine
-- ender_portal
+- end_portal
+- end_portal_frame
 - tripwire_hook
 - tripwire
-- wood_button
 - flower_pot
-- leaves
-- leaves_2
+- oak_leaves
+- spruce_leaves
+- birch_leaves
+- jungle_leaves
+- acacia_leaves
+- dark_oak_leaves
 - barrier
 - iron_trapdoor
-- wall_banner
+- oak_trapdoor
+- spruce_trapdoor
+- birch_trapdoor
+- jungle_trapdoor
+- acacia_trapdoor
+- dark_oak_trapdoor
+- oak_door
 - spruce_door
 - birch_door
 - jungle_door
