Add delay between random location checks and command parameter to set it

--- a/randomteleport-plugin/src/main/resources/config.yml
+++ b/randomteleport-plugin/src/main/resources/config.yml
@@ -2,6 +2,7 @@
 lang: en
 # Some debug information
 debug: true
+# Delay in ticks between checking chunks when searching
 
 # Blocks to teleport on in normal mode
 save-blocks:
