Rename maven project and add provides to differentiate from others

--- a/randomteleport-plugin/src/main/resources/plugin.yml
+++ b/randomteleport-plugin/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
 name: RandomTeleport
+provides: [FUBSRandomTeleport]
 main: de.themoep.randomteleport.RandomTeleport
 version: '${minecraft.plugin.version}'
 api-version: 1.13
