--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>randomteleport-parent</artifactId>
     <version>2.0-SNAPSHOT</version>
     <description>Randomly teleport players on your server!</description>
-    <name>RandomTeleport</name>
+    <name>FUBSRandomTeleport</name>
     <packaging>pom</packaging>
 
     <properties>
