Added missing GriefDefender hook artifact

--- a/randomteleport-plugin/pom.xml
+++ b/randomteleport-plugin/pom.xml
@@ -48,6 +48,12 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}.pluginhook</groupId>
+            <artifactId>griefdefender</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
