Implements Hooks for GriefDefender & ChunkyBorder. (#49)
* Added griefdefender support

* Added info command

* Fixed info command not executing

oops

* Implemented hook for chunkyborder

* Removed --info command

You can get this info in the logs.

* Update plugin.yml

* Added missing GriefDefender hook artifact

--- a/randomteleport-plugin-hooks/pom.xml
+++ b/randomteleport-plugin-hooks/pom.xml
@@ -18,10 +18,12 @@
         <module>worldguard-6</module>
         <module>worldguard-7</module>
         <module>griefprevention</module>
+        <module>griefdefender</module>
         <module>redprotect</module>
         <module>factions</module>
         <module>factions-uuid</module>
         <module>worldborder</module>
+        <module>chunkyborder</module>
     </modules>
 
     <dependencies>
