--- a/randomteleport-plugin-hooks/griefdefender/pom.xml
+++ b/randomteleport-plugin-hooks/griefdefender/pom.xml
@@ -21,6 +21,7 @@
             <groupId>com.griefdefender</groupId>
             <artifactId>api</artifactId>
             <version>2.1.0-20220122.032038-5</version>
+            <scope>provided</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.bukkit</groupId>
